# ray-adapter

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh  install_tools.sh  requirements.txt  run.sh
.gitee/:  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.zh-CN.md
.gitee/ISSUE_TEMPLATE/: 001-bug-report.yml  004-RFC.yml
common/litebus/: litebus.cmake
common/logs/: logs.cmake
common/logs/src/sdk/: logger_context.cpp
common/metrics/: CMakeLists.txt  build.sh  metrics.cmake
functionsystem/: .clang-format  CMakeLists.txt
functionsystem/apps/cli/: go.mod  go.sum
functionsystem/apps/cli/internal/: root.go
functionsystem/apps/cli/proto/: message.proto
functionsystem/apps/cli/utils/: cluster.go  cluster_test.go  cmd_args.go  table.go  table_test.go
functionsystem/src/: CMakeLists.txt
functionsystem/src/common/: CMakeLists.txt
functionsystem/src/common/aksk/: CMakeLists.txt  aksk_util.cpp  aksk_util.h  sign_request.h
functionsystem/src/common/common_flags/: common_flags.cpp  common_flags.h
functionsystem/src/common/constants/: actor_name.h  constants.h  signal.h
functionsystem/src/common/create_agent_decision/: create_agent_decision.h
functionsystem/src/common/crypto/: CMakeLists.txt  crypto.cpp  crypto.h
functionsystem/src/common/proto/: CMakeLists.txt
functionsystem/src/domain_scheduler/: main.cpp
functionsystem/src/function_agent/: CMakeLists.txt  agent_service_actor.cpp  agent_service_actor.h  main.cpp
functionsystem/src/function_master/: main.cpp
functionsystem/src/function_proxy/: main.cpp
functionsystem/src/iam_server/: main.cpp
functionsystem/tests/integration/: runtime_manager_test.cpp
proto/inner/: agent_plugin.proto  common.proto  core_service.proto
proto/posix/: core_service.proto  runtime_rpc.proto
ray_adapter/: __init__.py  actor.py  cloudpickle.py  exceptions.py  runtime_context.py  worker.py
ray_adapter/_private/: __init__.py  state.py
ray_adapter/_private/runtime_env/: constants.py
ray_adapter/job_submission/: __init__.py  common.py  model.py  sdk.py  utils.py
ray_adapter/tests/: test_actor.py  test_adapter_apis.py  test_exceptions.py  test_jobclient.py  test_placement_group.py  test_services.py  test_state.py  test_state_apis.py
ray_adapter/util/: __init__.py  placement_group.py
ray_adapter/util/collective/: __init__.py  collective.py  util.py
ray_adapter/util/state/: __init__.py  api.py
scripts/: basic_build.sh
scripts/config/meta_service/: metaservice_config.json
scripts/deploy/function_system/: install.sh
scripts/executor/: download_opensource.py  make_functionsystem.py
scripts/executor/builder/: build_cpp.py  build_go.py
scripts/executor/compile/: compile_go.py
scripts/executor/tasks/: build_task.py  download_vendor.py  pack_task.py
scripts/executor/utils/: __init__.py  archive.py  tools.py
(+236 files in other folders)
